Fix issue where like and comment logos are not aligned vertically and are spread apart on index page

--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -214,6 +214,7 @@ border-radius: 10px;
 .post-icons-left {
     display: flex;
     flex-direction: row;
+    align-items: center;
 }
 
 .post-icons-right i {
